--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@uiw/codemirror-extensions-langs": "^4.23.0",
     "@uiw/codemirror-theme-vscode": "^4.23.0",
     "@uiw/react-codemirror": "^4.23.0",
+    "js-cookie": "^3.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
