--- a/server/vercel.json
+++ b/server/vercel.json
@@ -2,17 +2,14 @@
     "version": 2,
     "builds": [
         {
-            "src": "src/index.js",
+            "src": "./index.js",
             "use": "@vercel/node"
         }
     ],
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "src/index.js"
+            "dest": "/"
         }
-    ],
-    "env": {
-        "MONGODB_URI": "@mongodb_uri"
-    }
+    ]
 }
