--- a/server/vercel.json
+++ b/server/vercel.json
@@ -8,8 +8,16 @@
     ],
     "routes": [
         {
-            "src": "/api/(.*)",
-            "dest": "src/index.js"
+            "src": "/(.*)",
+            "dest": "src/index.js",
+            "methods": [
+                "GET",
+                "POST",
+                "PUT",
+                "DELETE",
+                "PATCH",
+                "OPTIONS"
+            ]
         }
     ]
 }
