--- a/server/package.json
+++ b/server/package.json
@@ -14,13 +14,17 @@
   "dependencies": {
     "@prisma/client": "5.17.0",
     "bcrypt": "^5.1.1",
+    "cloudinary": "^2.5.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
+    "multer": "1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^6.9.14",
     "nodemon": "^3.1.4",
-    "prisma": "^5.17.0"
+    "prisma": "^5.17.0",
+    "puppeteer": "^23.9.0"
   }
 }
