--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
   "type": "commonjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "npx prisma generate && nodemon index.js"
+    "dev": "nodemon index.js",
+    "vercel-build": "pnpm prisma generate"
   },
   "keywords": [],
   "author": "",
