--- a/server/vercel.json
+++ b/server/vercel.json
@@ -13,7 +13,8 @@
       "dest": "index.js",
       "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
       "headers": {
-        "Access-Control-Allow-Origin": "https://codepen-fullstack-client.vercel.app"
+        "Access-Control-Allow-Origin": "https://codepen-fullstack-client.vercel.app",
+        "Access-Control-Allow-Credentials": "true"
       }
     }
   ]
