--- a/server/vercel.json
+++ b/server/vercel.json
@@ -3,19 +3,14 @@
   "buildCommand": "pnpm run vercel-build",
   "builds": [
     {
-      "src": "index.js",
+      "src": "./index.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "index.js",
-      "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
-      "headers": {
-        "Access-Control-Allow-Origin": "https://codepen-fullstack-client.vercel.app",
-        "Access-Control-Allow-Credentials": "true"
-      }
+      "dest": "./index.js"
     }
   ]
 }
