--- a/server/vercel.json
+++ b/server/vercel.json
@@ -3,14 +3,17 @@
   "buildCommand": "pnpm run vercel-build",
   "builds": [
     {
-      "src": "./index.js",
-      "use": "@vercel/node"
+      "src": "src/index.js",
+      "use": "@vercel/node",
+      "config": {
+        "includeFiles": ["src/**/*"]
+      }
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "./index.js"
+      "dest": "src/index.js"
     }
   ]
 }
