--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/index.js",
+    "postinstall": "pnpm prisma generate",
     "vercel-build": "pnpm prisma generate"
   },
   "keywords": [],
