--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/index.js",
     "postinstall": "pnpm prisma generate",
-    "vercel-build": "pnpm prisma generate && pnpm prisma migrate deploy && next build"
+    "vercel-build": "pnpm prisma generate &&  next build"
   },
   "keywords": [],
   "author": "",
