--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
     "nodemailer": "^6.9.14",
     "nodemon": "^3.1.4",
     "prisma": "^5.17.0",
-    "puppeteer": "^23.9.0"
+    "puppeteer": "^23.9.0",
+    "speakeasy": "^2.0.0"
   }
 }
